; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dtv/extr_access.c_dvbs2_setup.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dtv/extr_access.c_dvbs2_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"dvb-modulation\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"dvb-fec\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"dvb-srate\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"dvb-pilot\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"dvb-rolloff\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"dvb-stream\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @dvbs2_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dvbs2_setup(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = call i8* @var_InheritModulation(i32* %14, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i8* %15, i8** %7, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i8* @var_InheritCodeRate(i32* %16, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  store i8* %17, i8** %8, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = call i8* @var_InheritInteger(i32* %18, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  store i8* %19, i8** %9, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i8* @var_InheritInteger(i32* %20, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0))
  %22 = ptrtoint i8* %21 to i32
  store i32 %22, i32* %10, align 4
  %23 = load i32*, i32** %4, align 8
  %24 = call i8* @var_InheritInteger(i32* %23, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %25 = ptrtoint i8* %24 to i32
  store i32 %25, i32* %11, align 4
  %26 = load i32*, i32** %4, align 8
  %27 = call i8* @var_InheritInteger(i32* %26, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0))
  store i8* %27, i8** %12, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = load i8*, i8** %7, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = load i8*, i8** %8, align 8
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* %11, align 4
  %35 = load i8*, i8** %12, align 8
  %36 = call i32 @dvb_set_dvbs2(i32* %28, i32 %29, i8* %30, i8* %31, i8* %32, i32 %33, i32 %34, i8* %35)
  store i32 %36, i32* %13, align 4
  %37 = load i32, i32* %13, align 4
  %38 = icmp eq i32 %37, 0
  br i1 %38, label %39, label %44

39:                                               ; preds = %3
  %40 = load i32*, i32** %4, align 8
  %41 = load i32*, i32** %5, align 8
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @sec_setup(i32* %40, i32* %41, i32 %42)
  br label %44

44:                                               ; preds = %39, %3
  %45 = load i32, i32* %13, align 4
  ret i32 %45
}

declare dso_local i8* @var_InheritModulation(i32*, i8*) #1

declare dso_local i8* @var_InheritCodeRate(i32*, i8*) #1

declare dso_local i8* @var_InheritInteger(i32*, i8*) #1

declare dso_local i32 @dvb_set_dvbs2(i32*, i32, i8*, i8*, i8*, i32, i32, i8*) #1

declare dso_local i32 @sec_setup(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
